fixing layouts overflow

--- a/components/chat/ChatInput/styles.css
+++ b/components/chat/ChatInput/styles.css
@@ -5,7 +5,7 @@
     display: flex;
     justify-content: center;
     align-items: flex-end;
-
+    z-index: 9999;
     position: relative;
 }
 
